// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Organisms/Data Table Default 1`] = `
.c0 {
  --text-opacity: 1;
  color: rgba(88,80,236,var(--text-opacity));
}

.c0:hover {
  --text-opacity: 1;
  color: rgba(54,47,120,var(--text-opacity));
}

<div
  className="flex flex-col "
>
  <div
    className="-my-2 py-2 overflow-x-auto sm:-mx-6 sm:px-6 lg:-mx-8 lg:px-8"
  >
    <div
      className="align-middle inline-block min-w-full shadow overflow-hidden sm:rounded-lg border-b border-gray-200"
    >
      <table
        className="min-w-full"
      >
        <thead>
          <tr>
            <th
              className="px-6 py-3 border-b border-gray-200 bg-gray-50 text-xs leading-4 font-medium text-gray-500 uppercase tracking-wider text-left"
            >
              Project Name
            </th>
            <th
              className="px-6 py-3 border-b border-gray-200 bg-gray-50 text-xs leading-4 font-medium text-gray-500 uppercase tracking-wider text-left"
            >
              Company
            </th>
            <th
              className="px-6 py-3 border-b border-gray-200 bg-gray-50 text-xs leading-4 font-medium text-gray-500 uppercase tracking-wider text-right"
            >
              Actions
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            className="bg-white"
          >
            <td
              className="px-6 py-4 whitespace-no-wrap text-sm leading-5 font-medium text-gray-900"
            >
              Internal
            </td>
            <td
              className="px-6 py-4 whitespace-no-wrap text-sm leading-5 text-gray-500"
            >
              byteleaf
            </td>
            <td
              className="px-6 py-4 whitespace-no-wrap text-right text-sm leading-5 font-medium"
            >
              <a
                className="c0 mr-3"
                href="/companies/1"
                onClick={[Function]}
              >
                View
              </a>
              <a
                className="c0 false"
                href="/companies/1"
                onClick={[Function]}
              >
                Delete
              </a>
            </td>
          </tr>
          <tr
            className="bg-gray-50"
          >
            <td
              className="px-6 py-4 whitespace-no-wrap text-sm leading-5 font-medium text-gray-900"
            >
              Customer Aquisition
            </td>
            <td
              className="px-6 py-4 whitespace-no-wrap text-sm leading-5 text-gray-500"
            >
              byteleaf
            </td>
            <td
              className="px-6 py-4 whitespace-no-wrap text-right text-sm leading-5 font-medium"
            >
              <a
                className="c0 mr-3"
                href="/companies/2"
                onClick={[Function]}
              >
                View
              </a>
              <a
                className="c0 false"
                href="/companies/2"
                onClick={[Function]}
              >
                Delete
              </a>
            </td>
          </tr>
          <tr
            className="bg-white"
          >
            <td
              className="px-6 py-4 whitespace-no-wrap text-sm leading-5 font-medium text-gray-900"
            >
              Accounting
            </td>
            <td
              className="px-6 py-4 whitespace-no-wrap text-sm leading-5 text-gray-500"
            >
              byteleaf
            </td>
            <td
              className="px-6 py-4 whitespace-no-wrap text-right text-sm leading-5 font-medium"
            >
              <a
                className="c0 mr-3"
                href="/companies/3"
                onClick={[Function]}
              >
                View
              </a>
              <a
                className="c0 false"
                href="/companies/3"
                onClick={[Function]}
              >
                Delete
              </a>
            </td>
          </tr>
          <tr
            className="bg-gray-50"
          >
            <td
              className="px-6 py-4 whitespace-no-wrap text-sm leading-5 font-medium text-gray-900"
            >
              Development
            </td>
            <td
              className="px-6 py-4 whitespace-no-wrap text-sm leading-5 text-gray-500"
            >
              Test AG
            </td>
            <td
              className="px-6 py-4 whitespace-no-wrap text-right text-sm leading-5 font-medium"
            >
              <a
                className="c0 mr-3"
                href="/companies/4"
                onClick={[Function]}
              >
                View
              </a>
              <a
                className="c0 false"
                href="/companies/4"
                onClick={[Function]}
              >
                Delete
              </a>
            </td>
          </tr>
          <tr
            className="bg-white"
          >
            <td
              className="px-6 py-4 whitespace-no-wrap text-sm leading-5 font-medium text-gray-900"
            >
              Development
            </td>
            <td
              className="px-6 py-4 whitespace-no-wrap text-sm leading-5 text-gray-500"
            >
              Test GmbH
            </td>
            <td
              className="px-6 py-4 whitespace-no-wrap text-right text-sm leading-5 font-medium"
            >
              <a
                className="c0 mr-3"
                href="/companies/5"
                onClick={[Function]}
              >
                View
              </a>
              <a
                className="c0 false"
                href="/companies/5"
                onClick={[Function]}
              >
                Delete
              </a>
            </td>
          </tr>
          <tr
            className="bg-gray-50"
          >
            <td
              className="px-6 py-4 whitespace-no-wrap text-sm leading-5 font-medium text-gray-900"
            >
              Testing
            </td>
            <td
              className="px-6 py-4 whitespace-no-wrap text-sm leading-5 text-gray-500"
            >
              Test GmbH
            </td>
            <td
              className="px-6 py-4 whitespace-no-wrap text-right text-sm leading-5 font-medium"
            >
              <a
                className="c0 mr-3"
                href="/companies/6"
                onClick={[Function]}
              >
                View
              </a>
              <a
                className="c0 false"
                href="/companies/6"
                onClick={[Function]}
              >
                Delete
              </a>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Storyshots Organisms/Data Table Empty Table 1`] = `
<div
  className="flex flex-col "
>
  <div
    className="-my-2 py-2 overflow-x-auto sm:-mx-6 sm:px-6 lg:-mx-8 lg:px-8"
  >
    <div
      className="align-middle inline-block min-w-full shadow overflow-hidden sm:rounded-lg border-b border-gray-200"
    >
      <table
        className="min-w-full"
      >
        <thead>
          <tr>
            <th
              className="px-6 py-3 border-b border-gray-200 bg-gray-50 text-xs leading-4 font-medium text-gray-500 uppercase tracking-wider text-left"
            >
              Project Name
            </th>
            <th
              className="px-6 py-3 border-b border-gray-200 bg-gray-50 text-xs leading-4 font-medium text-gray-500 uppercase tracking-wider text-left"
            >
              Company
            </th>
            <th
              className="px-6 py-3 border-b border-gray-200 bg-gray-50 text-xs leading-4 font-medium text-gray-500 uppercase tracking-wider text-right"
            >
              Actions
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            className="bg-white"
          >
            <td
              className="px-6 py-4 whitespace-no-wrap text-sm text-center leading-5"
              colSpan={3}
            >
              Nothing to display...
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;
